exp3/toy.output
Terminals unused in grammar

   SEMI


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | Specifier DecList ENTERS ExtDefList
    4           | Specifier DecList ExtDefList
    5           | Specifier FunDec CompSt ENTERS ExtDefList
    6           | Specifier FunDec ENTERS ExtDefList
    7           | Specifier FunDec CompSt error RC ExtDefList
    8           | RETURN Exp ENTERS ExtDefList
    9           | IF LP Exp RP ENTERS CompSt ENTERS ExtDefList
   10           | IF LP Exp RP ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS ExtDefList
   11           | WHILE LP Exp RP ENTERS CompSt ENTERS ExtDefList
   12           | error ENTERS ExtDefList

   13 Specifier: TYPE

   14 DecList: Dec
   15        | Dec COMMA DecList
   16        | COMMA DecList
   17        | COMMA

   18 Dec: VarDec
   19    | VarDec ASSIGNOP Exp

   20 VarDec: ID

   21 FunDec: ID LP VarList RP

   22 VarList: %empty
   23        | ParamDec
   24        | ParamDec COMMA VarList

   25 ParamDec: Specifier VarDec

   26 CompSt: LC ENTERS DefList StmList RC
   27       | error RC

   28 DefList: %empty
   29        | Specifier DecList ENTERS DefList

   30 StmList: %empty
   31        | Stmt StmList

   32 Stmt: Exp ENTERS
   33     | CompSt ENTERS
   34     | RETURN Exp ENTERS
   35     | IF LP Exp RP ENTERS CompSt ENTERS
   36     | IF LP Exp RP ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS
   37     | WHILE LP Exp RP ENTERS CompSt ENTERS
   38     | BREAK ENTERS
   39     | RETURN Exp error ENTERS
   40     | IF LP Exp error RC ENTERS
   41     | WHILE LP Exp error RP ENTERS CompSt error ENTERS

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp PLUSASS Exp
   44    | Exp MINUSASS Exp
   45    | Exp STARASS Exp
   46    | Exp DIVASS Exp
   47    | PLUSPLUS Exp
   48    | MINUSMINUS Exp
   49    | Exp PLUSPLUS
   50    | Exp MINUSMINUS
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID
   63    | INT
   64    | FLOAT
   65    | CHAR
   66    | error

   67 Args: %empty
   68     | Exp COMMA Args
   69     | Exp

   70 ENTERS: ENTER
   71       | ENTER ENTERS


Terminals, with rules where they appear

$end (0) 0
error (256) 7 12 27 39 40 41 66
INT (258) 63
ID (259) 20 21 61 62
RELOP (260) 53
TYPE (261) 13
FLOAT (262) 64
CHAR (263) 65
LP (264) 9 10 11 21 35 36 37 40 41 58 61
RP (265) 9 10 11 21 35 36 37 41 58 61
LC (266) 26
RC (267) 7 26 27 40
SEMI (268)
COMMA (269) 15 16 17 24 68
ENTER (270) 70 71
PLUS (271) 54
MINUS (272) 55 59
STAR (273) 56
DIV (274) 57
ASSIGNOP (275) 19 42
AND (276) 51
OR (277) 52
NOT (278) 60
IF (279) 9 10 35 36 40
BREAK (280) 38
ELSE (281) 10 36
WHILE (282) 11 37 41
RETURN (283) 8 34 39
PLUSASS (284) 43
MINUSASS (285) 44
STARASS (286) 45
DIVASS (287) 46
PLUSPLUS (288) 47 49
MINUSMINUS (289) 48 50
UMINUS (290)
UPLUSPLUS (291)
UMINUSMINUS (292)
LOWER_THEN_ELSE (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
ExtDefList (41)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1 3 4 5 6 7 8 9 10
    11 12
Specifier (42)
    on left: 13, on right: 3 4 5 6 7 25 29
DecList (43)
    on left: 14 15 16 17, on right: 3 4 15 16 29
Dec (44)
    on left: 18 19, on right: 14 15
VarDec (45)
    on left: 20, on right: 18 19 25
FunDec (46)
    on left: 21, on right: 5 6 7
VarList (47)
    on left: 22 23 24, on right: 21 24
ParamDec (48)
    on left: 25, on right: 23 24
CompSt (49)
    on left: 26 27, on right: 5 7 9 10 11 33 35 36 37 41
DefList (50)
    on left: 28 29, on right: 26 29
StmList (51)
    on left: 30 31, on right: 26 31
Stmt (52)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 31
Exp (53)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66, on right: 8 9 10 11 19 32 34 35 36 37 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    68 69
Args (54)
    on left: 67 68 69, on right: 61 68
ENTERS (55)
    on left: 70 71, on right: 3 5 6 8 9 10 11 12 26 29 32 33 34 35
    36 37 38 39 40 41 71


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 6
    ExtDefList  go to state 7
    Specifier   go to state 8


State 1

   12 ExtDefList: error . ENTERS ExtDefList

    ENTER  shift, and go to state 9

    ENTERS  go to state 10


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

    9 ExtDefList: IF . LP Exp RP ENTERS CompSt ENTERS ExtDefList
   10           | IF . LP Exp RP ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS ExtDefList

    LP  shift, and go to state 11


State 4

   11 ExtDefList: WHILE . LP Exp RP ENTERS CompSt ENTERS ExtDefList

    LP  shift, and go to state 12


State 5

    8 ExtDefList: RETURN . Exp ENTERS ExtDefList

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 23


State 6

    0 $accept: program . $end

    $end  shift, and go to state 24


State 7

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 8

    3 ExtDefList: Specifier . DecList ENTERS ExtDefList
    4           | Specifier . DecList ExtDefList
    5           | Specifier . FunDec CompSt ENTERS ExtDefList
    6           | Specifier . FunDec ENTERS ExtDefList
    7           | Specifier . FunDec CompSt error RC ExtDefList

    ID     shift, and go to state 25
    COMMA  shift, and go to state 26

    DecList  go to state 27
    Dec      go to state 28
    VarDec   go to state 29
    FunDec   go to state 30


State 9

   70 ENTERS: ENTER .
   71       | ENTER . ENTERS

    ENTER  shift, and go to state 9

    $default  reduce using rule 70 (ENTERS)

    ENTERS  go to state 31


State 10

   12 ExtDefList: error ENTERS . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 32
    Specifier   go to state 8


State 11

    9 ExtDefList: IF LP . Exp RP ENTERS CompSt ENTERS ExtDefList
   10           | IF LP . Exp RP ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS ExtDefList

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 33


State 12

   11 ExtDefList: WHILE LP . Exp RP ENTERS CompSt ENTERS ExtDefList

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 34


State 13

   66 Exp: error .

    $default  reduce using rule 66 (Exp)


State 14

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 15

   61 Exp: ID . LP Args RP
   62    | ID .

    LP  shift, and go to state 35

    $default  reduce using rule 62 (Exp)


State 16

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 17

   65 Exp: CHAR .

    $default  reduce using rule 65 (Exp)


State 18

   58 Exp: LP . Exp RP

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 36


State 19

   59 Exp: MINUS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 37


State 20

   60 Exp: NOT . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 38


State 21

   47 Exp: PLUSPLUS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 39


State 22

   48 Exp: MINUSMINUS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 40


State 23

    8 ExtDefList: RETURN Exp . ENTERS ExtDefList
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    RELOP       shift, and go to state 41
    ENTER       shift, and go to state 9
    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    ASSIGNOP    shift, and go to state 46
    AND         shift, and go to state 47
    OR          shift, and go to state 48
    PLUSASS     shift, and go to state 49
    MINUSASS    shift, and go to state 50
    STARASS     shift, and go to state 51
    DIVASS      shift, and go to state 52
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    ENTERS  go to state 55


State 24

    0 $accept: program $end .

    $default  accept


State 25

   20 VarDec: ID .
   21 FunDec: ID . LP VarList RP

    LP  shift, and go to state 56

    $default  reduce using rule 20 (VarDec)


State 26

   16 DecList: COMMA . DecList
   17        | COMMA .

    ID     shift, and go to state 57
    COMMA  shift, and go to state 26

    $default  reduce using rule 17 (DecList)

    DecList  go to state 58
    Dec      go to state 28
    VarDec   go to state 29


State 27

    3 ExtDefList: Specifier DecList . ENTERS ExtDefList
    4           | Specifier DecList . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    ENTER   shift, and go to state 9
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 59
    Specifier   go to state 8
    ENTERS      go to state 60


State 28

   14 DecList: Dec .
   15        | Dec . COMMA DecList

    COMMA  shift, and go to state 61

    $default  reduce using rule 14 (DecList)


State 29

   18 Dec: VarDec .
   19    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62

    $default  reduce using rule 18 (Dec)


State 30

    5 ExtDefList: Specifier FunDec . CompSt ENTERS ExtDefList
    6           | Specifier FunDec . ENTERS ExtDefList
    7           | Specifier FunDec . CompSt error RC ExtDefList

    error  shift, and go to state 63
    LC     shift, and go to state 64
    ENTER  shift, and go to state 9

    CompSt  go to state 65
    ENTERS  go to state 66


State 31

   71 ENTERS: ENTER ENTERS .

    $default  reduce using rule 71 (ENTERS)


State 32

   12 ExtDefList: error ENTERS ExtDefList .

    $default  reduce using rule 12 (ExtDefList)


State 33

    9 ExtDefList: IF LP Exp . RP ENTERS CompSt ENTERS ExtDefList
   10           | IF LP Exp . RP ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS ExtDefList
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    RELOP       shift, and go to state 41
    RP          shift, and go to state 67
    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    ASSIGNOP    shift, and go to state 46
    AND         shift, and go to state 47
    OR          shift, and go to state 48
    PLUSASS     shift, and go to state 49
    MINUSASS    shift, and go to state 50
    STARASS     shift, and go to state 51
    DIVASS      shift, and go to state 52
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54


State 34

   11 ExtDefList: WHILE LP Exp . RP ENTERS CompSt ENTERS ExtDefList
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    RELOP       shift, and go to state 41
    RP          shift, and go to state 68
    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    ASSIGNOP    shift, and go to state 46
    AND         shift, and go to state 47
    OR          shift, and go to state 48
    PLUSASS     shift, and go to state 49
    MINUSASS    shift, and go to state 50
    STARASS     shift, and go to state 51
    DIVASS      shift, and go to state 52
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54


State 35

   61 Exp: ID LP . Args RP

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    RP  reduce using rule 67 (Args)

    Exp   go to state 69
    Args  go to state 70


State 36

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP

    RELOP       shift, and go to state 41
    RP          shift, and go to state 71
    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    ASSIGNOP    shift, and go to state 46
    AND         shift, and go to state 47
    OR          shift, and go to state 48
    PLUSASS     shift, and go to state 49
    MINUSASS    shift, and go to state 50
    STARASS     shift, and go to state 51
    DIVASS      shift, and go to state 52
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54


State 37

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .

    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 59 (Exp)


State 38

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .

    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 60 (Exp)


State 39

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   47    | PLUSPLUS Exp .
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 47 (Exp)


State 40

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   48    | MINUSMINUS Exp .
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 48 (Exp)


State 41

   53 Exp: Exp RELOP . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 72


State 42

   54 Exp: Exp PLUS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 73


State 43

   55 Exp: Exp MINUS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 74


State 44

   56 Exp: Exp STAR . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 75


State 45

   57 Exp: Exp DIV . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 76


State 46

   42 Exp: Exp ASSIGNOP . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 77


State 47

   51 Exp: Exp AND . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 78


State 48

   52 Exp: Exp OR . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 79


State 49

   43 Exp: Exp PLUSASS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 80


State 50

   44 Exp: Exp MINUSASS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 81


State 51

   45 Exp: Exp STARASS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 82


State 52

   46 Exp: Exp DIVASS . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 83


State 53

   49 Exp: Exp PLUSPLUS .

    $default  reduce using rule 49 (Exp)


State 54

   50 Exp: Exp MINUSMINUS .

    $default  reduce using rule 50 (Exp)


State 55

    8 ExtDefList: RETURN Exp ENTERS . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 84
    Specifier   go to state 8


State 56

   21 FunDec: ID LP . VarList RP

    TYPE  shift, and go to state 2

    $default  reduce using rule 22 (VarList)

    Specifier  go to state 85
    VarList    go to state 86
    ParamDec   go to state 87


State 57

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 58

   16 DecList: COMMA DecList .

    $default  reduce using rule 16 (DecList)


State 59

    4 ExtDefList: Specifier DecList ExtDefList .

    $default  reduce using rule 4 (ExtDefList)


State 60

    3 ExtDefList: Specifier DecList ENTERS . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 88
    Specifier   go to state 8


State 61

   15 DecList: Dec COMMA . DecList

    ID     shift, and go to state 57
    COMMA  shift, and go to state 26

    DecList  go to state 89
    Dec      go to state 28
    VarDec   go to state 29


State 62

   19 Dec: VarDec ASSIGNOP . Exp

    error       shift, and go to state 13
    INT         shift, and go to state 14
    ID          shift, and go to state 15
    FLOAT       shift, and go to state 16
    CHAR        shift, and go to state 17
    LP          shift, and go to state 18
    MINUS       shift, and go to state 19
    NOT         shift, and go to state 20
    PLUSPLUS    shift, and go to state 21
    MINUSMINUS  shift, and go to state 22

    Exp  go to state 90


State 63

   27 CompSt: error . RC

    RC  shift, and go to state 91


State 64

   26 CompSt: LC . ENTERS DefList StmList RC

    ENTER  shift, and go to state 9

    ENTERS  go to state 92


State 65

    5 ExtDefList: Specifier FunDec CompSt . ENTERS ExtDefList
    7           | Specifier FunDec CompSt . error RC ExtDefList

    error  shift, and go to state 93
    ENTER  shift, and go to state 9

    ENTERS  go to state 94


State 66

    6 ExtDefList: Specifier FunDec ENTERS . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 95
    Specifier   go to state 8


State 67

    9 ExtDefList: IF LP Exp RP . ENTERS CompSt ENTERS ExtDefList
   10           | IF LP Exp RP . ENTERS CompSt ENTERS ELSE ENTERS CompSt ENTERS ExtDefList

    ENTER  shift, and go to state 9

    ENTERS  go to state 96


State 68

   11 ExtDefList: WHILE LP Exp RP . ENTERS CompSt ENTERS ExtDefList

    ENTER  shift, and go to state 9

    ENTERS  go to state 97


State 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   68 Args: Exp . COMMA Args
   69     | Exp .

    RELOP       shift, and go to state 41
    COMMA       shift, and go to state 98
    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    ASSIGNOP    shift, and go to state 46
    AND         shift, and go to state 47
    OR          shift, and go to state 48
    PLUSASS     shift, and go to state 49
    MINUSASS    shift, and go to state 50
    STARASS     shift, and go to state 51
    DIVASS      shift, and go to state 52
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 69 (Args)


State 70

   61 Exp: ID LP Args . RP

    RP  shift, and go to state 99


State 71

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


State 72

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . PLUSASS Exp
   44    | Exp . MINUSASS Exp
   45    | Exp . STARASS Exp
   46    | Exp . DIVASS Exp
   49    | Exp . PLUSPLUS
   50    | Exp . MINUSMINUS
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   53    | Exp RELOP Exp .
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp

    PLUS        shift, and go to state 42
    MINUS       shift, and go to state 43
    STAR        shift, and go to state 44
    DIV         shift, and go to state 45
    PLUSPLUS    shift, and go to state 53
    MINUSMINUS  shift, and go to state 54

    $default  reduce using rule 53 (Exp)


State 73
